<resources>
    <string name="text_address">Address</string>
    <string name="text_app_name_update">%s update</string>
    <string name="text_all_forums">All forums</string>
    <string name="text_all_posts">All posts</string>
    <string name="text_autohide_comment">Find in comments</string>
    <string name="text_autohide_name">Find in names</string>
    <string name="text_autohide_original_post">Only original posts</string>
    <string name="text_autohide_sage">Only posts with sage</string>
    <string name="text_autohide_subject">Find in subjects</string>
    <string name="text_ban_id_format">Ban ID: %s</string>
    <string name="text_ban_start_date_format">Start date: %s</string>
    <string name="text_ban_expires_format">Expires: %s</string>
    <string name="text_ban_expires_never">never</string>
    <string name="text_ban_reason_format">Reason: %s</string>
    <string name="text_board">Board</string>
    <string name="text_board_speed_format">Speed: %s</string>
    <string name="text_bump_limit_format">Bump limit: %d posts</string>
    <string name="text_captcha">Captcha</string>
    <string name="text_closed_thread">Thread closed</string>
    <string name="text_code_number_address">Code, number, address</string>
    <string name="text_comment">Comment</string>
    <string name="text_configuration">Configuration</string>
    <string name="text_confirmation">Confirmation</string>
    <string name="text_cyclical_thread">Cyclical thread</string>
    <plurals name="text_deleted_count_format">
        <item quantity="one">%d deleted</item>
        <item quantity="other">%d deleted</item>
    </plurals>
    <string name="text_description">Description</string>
    <string name="text_disabled_images">Images are disabled</string>
    <string name="text_disabled_names">Names are disabled</string>
    <string name="text_disabled_sage">Sage is disabled</string>
    <string name="text_disabled_subjects">Subjects are disabled</string>
    <string name="text_disabled_tripcodes">Tripcodes are disabled</string>
    <string name="text_dont_replace">Don\'t replace</string>
    <string name="text_download_title">Select where to save</string>
    <string name="text_download_to_format">Save to \"%s\"</string>
    <string name="text_download_to_subdirectory">Save to subdirectory</string>
    <string name="text_enabled_flags">Flags are enabled</string>
    <string name="text_enabled_icons">Icons are enabled</string>
    <string name="text_extension_name_format">Extension %s</string>
    <string name="text_favorite_boards">Favorite boards</string>
    <string name="text_favorite_threads">Favorite threads</string>
    <string name="text_files_format">Files: %s</string>
    <plurals name="text_files_exist_format">
        <item quantity="one">%d file already exists.</item>
        <item quantity="other">%d files already exist.</item>
    </plurals>
    <string name="text_general">General</string>
    <string name="text_no_icon">No icon</string>
    <string name="text_in_thread_format_format">In thread %s</string>
    <string name="text_keep_all">Keep all</string>
    <string name="text_keep_current_version">Keep current version</string>
    <string name="text_links_attachments_format">Links-attachments: %s</string>
    <string name="text_local_archive">Local archive</string>
    <string name="text_main_application">Main application</string>
    <string name="text_match_found">Match found</string>
    <string name="text_match_found_format">Match found: %s</string>
    <string name="text_message_data">Message data</string>
    <string name="text_my_post">My post</string>
    <string name="text_name">Name</string>
    <string name="text_new_post">New post</string>
    <plurals name="text_new_posts_count_format">
        <item quantity="one">%d new post</item>
        <item quantity="other">%d new posts</item>
    </plurals>
    <plurals name="text_new_posts_count_short_format">
        <item quantity="one">%d new</item>
        <item quantity="other">%d new</item>
    </plurals>
    <string name="text_new_thread">New thread</string>
    <string name="text_no_matches_found">No matches found</string>
    <string name="text_no_thread_information">No information</string>
    <string name="text_older_7_days">Older than 7 days</string>
    <string name="text_only_forum_format">%s only</string>
    <string name="text_open_pages">Open pages</string>
    <string name="text_original_poster">Original poster</string>
    <string name="text_page_format">%d page</string>
    <string name="text_pages_count_format">Pages count: %d</string>
    <string name="text_password">Password</string>
    <string name="text_personal_data">Personal data</string>
    <string name="text_port">Port</string>
    <plurals name="text_posts_per_hour_format">
        <item quantity="one">%d post per hour</item>
        <item quantity="other">%d posts per hour</item>
    </plurals>
    <string name="text_post_sent">Post sent</string>
    <string name="text_posts_sent">Posts sent</string>
    <string name="text_posts_with_files_format">Posts with files: %s</string>
    <string name="text_quality_format">Quality: %d%%</string>
    <string name="text_rating">Rating</string>
    <string name="text_read_only">Read only</string>
    <string name="text_reduce_format">Reduce: %dx</string>
    <string name="text_reencode_image">Re-encode image</string>
    <string name="text_regex">Regular expression</string>
    <string name="text_rejected_words">Rejected words:</string>
    <string name="text_remove_file_name">Remove file name</string>
    <string name="text_remove_metadata">Remove metadata</string>
    <string name="text_remove_rules">Remove rules</string>
    <string name="text_replace">Replace</string>
    <plurals name="text_replies_count_format">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <string name="text_replies_to_format">Replies to %s</string>
    <string name="text_sage_description">Don\'t bring up the thread</string>
    <string name="text_sage_description_infinitive">Don\'t bring up</string>
    <string name="text_save_files">Save files</string>
    <string name="text_save_thumbnails">Save thumbnails</string>
    <string name="text_selected_format">Selected: %d</string>
    <plurals name="text_several_files_count_format">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <string name="text_several_forums">Several forums</string>
    <string name="text_similar_to_format">Similar to %s</string>
    <string name="text_since_format">Since %s</string>
    <string name="text_sort_by_unsorted">Unsorted</string>
    <string name="text_sort_by_date">Sort by date created</string>
    <string name="text_sort_by_replies">Sort by replies</string>
    <string name="text_sorting">Sorting</string>
    <string name="text_spoiler">Spoiler</string>
    <string name="text_sticky_thread">Sticky thread</string>
    <string name="text_subject">Subject</string>
    <string name="text_test_string">Test string</string>
    <string name="text_this_week">This week</string>
    <string name="text_thread">Thread</string>
    <string name="text_thread_files_format">%d with files</string>
    <string name="text_threads_created">Threads created</string>
    <string name="text_threads_viewed">Threads viewed</string>
    <string name="text_today">Today</string>
    <string name="text_unique_hash">Unique hash</string>
    <string name="text_unique_posters_format">Unique posters: %s</string>
    <string name="text_total_posts_count_format">Total count of posts: %s</string>
    <string name="text_unsupported_version">Unsupported version</string>
    <string name="text_updates_format">Updates: %d</string>
    <string name="text_updates_available_format">Updates available: %d</string>
    <string name="text_user_banned">User banned</string>
    <string name="text_user_warned">User warned</string>
    <string name="text_warning">Warning</string>
    <string name="text_with_name_format">With name %s</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="action_fast_scroll_posts_previous">Find previous posts</string>
    <string name="action_fast_scroll_posts_forward">Find forward posts</string>
    <string name="action_add_post">Add reply</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_appearance">Appearance</string>
    <string name="action_archive_add">Archive</string>
    <string name="action_archive_view">Archive</string>
    <string name="action_attach">Attach</string>
    <string name="action_auto_refresh">Auto refreshing</string>
    <string name="action_block">Block</string>
    <string name="action_boards">Boards</string>
    <string name="action_browser">Browser</string>
    <string name="action_catalog">Catalog</string>
    <string name="action_change_theme">Change theme</string>
    <string name="action_check_on_startup">Check on startup</string>
    <string name="action_choose">Choose</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_deleted">Clear deleted</string>
    <string name="action_clear_history">Clear history</string>
    <string name="action_copy_email">Copy email</string>
    <string name="action_copy_expand">Copy&#8230;</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_copy_text">Copy text</string>
    <string name="action_copy_markup">Copy markup</string>
    <string name="action_delete">Delete</string>
    <string name="action_details">Details</string>
    <string name="action_download_file">Download file</string>
    <string name="action_download_files">Download files</string>
    <string name="action_expand">Expand</string>
    <string name="action_expanded_screen">Expanded screen</string>
    <string name="action_files_only">Files only</string>
    <string name="action_filter">Filter</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_general_boards">General boards</string>
    <string name="action_go_to_post">Go to post</string>
    <string name="action_got_it">Got it</string>
    <string name="action_group">Group</string>
    <string name="action_hidden_posts">Hidden posts</string>
    <string name="action_hide">Hide</string>
    <string name="action_hide_expand">Hide&#8230;</string>
    <string name="action_hide_name">Posts with the same name</string>
    <string name="action_hide_post">This post</string>
    <string name="action_hide_replies">Replies tree</string>
    <string name="action_hide_similar">Similar posts</string>
    <string name="action_history">History</string>
    <string name="action_load_captcha">Click to load captcha</string>
    <string name="action_lock_drawer">Lock drawer</string>
    <string name="action_make_home_page">Make home page</string>
    <string name="action_make_threadshot">Make threadshot</string>
    <string name="action_technical_info">Technical info</string>
    <string name="action_minimize">Minimize</string>
    <string name="action_my_posts">My posts</string>
    <string name="action_new_rule">New rule</string>
    <string name="action_new_thread">New thread</string>
    <string name="action_open_thread">Open thread</string>
    <string name="action_open_the_original">Open the original</string>
    <string name="action_pages">Pages</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_quote">Quote</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reload">Reload</string>
    <string name="action_restart">Restart</string>
    <string name="message_tripcode_warning">Tripcodes are disabled on this board. The password will be sent in pure form
		without conversion to tripcode.</string>
</resources>