<?xml version="1.0" encoding="utf-8"?>

<!--
	Copyright 2014-2016 Fukurou Mishiranu

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->

<view xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    class="com.mishiranu.dashchan.ui.posting.PostingActivity$ResizingScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/post_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/personal_data_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_personal_data" />

            <com.mishiranu.dashchan.widget.SafePasteEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:singleLine="true" />

            <com.mishiranu.dashchan.widget.SafePasteEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:singleLine="true" />

            <com.mishiranu.dashchan.widget.SafePasteEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:inputType="textVisiblePassword"
                android:maxLength="30"
                android:singleLine="true"
                android:typeface="monospace" />

            <com.mishiranu.dashchan.widget.DropdownView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" />

            <TextView
                android:id="@+id/personal_tripcode_warning"
                style="?android:attr/textAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingTop="4dp"
                android:paddingRight="12dp"
                android:paddingBottom="4dp"
                android:text="@string/message_tripcode_warning"
                android:textColor="?attr/colorTextError"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_message_data" />

        <com.mishiranu.dashchan.widget.SafePasteEditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_subject"
            android:inputType="textShortMessage|textCapSentences"
            android:maxLength="60"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/text_format_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="InconsistentLayout" />

            <com.mishiranu.dashchan.widget.SafePasteEditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/text_comment"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textLongMessage|textMultiLine|textCapSentences" />

        </LinearLayout>

        <TextView
            android:id="@+id/remaining_characters"
            style="?android:attr/textAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingBottom="4dp"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.mishiranu.dashchan.widget.CarryLayout
            android:id="@+id/checkbox_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center_vertical"
            android:horizontalSpacing="8dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:verticalSpacing="-4dp">

            <CheckBox
                android:id="@+id/sage_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sage_description_infinitive"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/spoiler_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_spoiler"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/original_poster_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_original_poster"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </com.mishiranu.dashchan.widget.CarryLayout>

        <LinearLayout
            android:id="@+id/attachment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_confirmation" />

        <FrameLayout
            android:id="@+id/footer_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</view>
